--- a/menustyle.css
+++ b/menustyle.css
@@ -440,12 +440,13 @@ h2 {
 
     .holder {
         overflow: none;
+        margin-right: 15%;
     }
 
     .items {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(15, auto) repeat(40, 0.1fr);
+        grid-template-rows: repeat(15, auto) repeat(35, 0.1fr);
         margin-left: 10%;
         margin-right: 5%;
         text-align: left;
@@ -590,7 +591,7 @@ h2 {
     .entree-items {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 1fr repeat(27, 0.1fr);
+        grid-template-rows: 0.1fr repeat(20, 0.1fr);
         margin-left: 10%;
     }
 
