--- a/menustyle.css
+++ b/menustyle.css
@@ -93,57 +93,70 @@ h2 {
     text-decoration: underline;
     font-weight: bold;
     font-size: 3em;
-    margin-top: 5%;
+
 }
 
 .grid-container {
     margin-left: 5%;
     margin-right: 5%;
     grid-column-gap: 3%;
-    grid-row-gap: 2%;
-    margin-bottom: 10%;
+    margin-bottom: 3%;
 }
 
-.items {
+.items-app {
     display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr;
-    grid-template-rows: repeat(7, auto);
-    margin-top: 3%;
-    margin-bottom: 18%;
+    grid-template-columns: 0.5fr 0.5fr;
+    grid-template-rows: repeat(7, 0.1428571429fr);
+    width: 43.5%;
+    float: left;
+    margin-right: 1.5%;
+    margin-top: 5%;
 }
 
-.app {
-    grid-row: 1;
-    grid-column: 1/3;
-}
-
-.app1 {
-    grid-row: 2;
-    grid-column: 1;
-    font-weight: bold;
+.items-pho {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(8, 0.125fr);
+    width: 43.5%;
+    margin-left: 1.5%;
+    float: left;
     margin-top: 5%;
 }
 
 .description {
     font-weight: 400;
-    margin-top: 3%;
+    margin-top: 1%;
+    margin-bottom: 10%;
 }
 
+.app {
+    grid-row: 1/2;
+    grid-column: 1/3;
+}
+
+.app1 {
+    grid-row: 2/3;
+    grid-column: 1/2;
+    font-weight: bold;
+    margin-top: 5%;
+}
+
+
 .app2 {
-    grid-row: 3;
-    grid-column: 1;
+    grid-row: 3/4;
+    grid-column: 1/2;
     font-weight: bold;
 }
 
 .app3 {
-    grid-row: 4;
-    grid-column: 1;
+    grid-row: 4/5;
+    grid-column: 1/2;
     font-weight: bold;
 }
 
 .app4 {
-    grid-row: 5;
-    grid-column: 1;
+    grid-row: 5/6;
+    grid-column: 1/2;
     font-weight: bold;
 }
 
@@ -199,14 +212,14 @@ h2 {
 }
 
 .pho {
-    grid-column: 3;
-    grid-row: 1;
-    margin-left: 1%;
+    grid-column: 1/2;
+    grid-row: 1/2;
+
 }
 
 .options {
-    grid-row: 2;
-    grid-column: 3;
+    grid-row: 2/3;
+    grid-column: 1/2;
     border-style: solid;
     border-color: #8AA160;
     text-align: center;
@@ -215,7 +228,6 @@ h2 {
     grid-template-rows: repeat(2, auto);
     grid-row-gap: 8%;
     grid-column-gap: 5%;
-    margin-left: 1%;
     padding: 3%;
 }
 
@@ -237,39 +249,57 @@ h2 {
     text-align: left;
 }
 
-.combos {
-    justify-content: flex-start;
-    align-self: start;
-    grid-column: 3;
-    grid-row: 3 / span 5;
-    margin-left: 1%;
+.combo1 {
+    grid-column: 1/2;
+    grid-row: 3 / 4;
+
+}
+
+.combo2 {
+    grid-column: 1/2;
+    grid-row: 4 / 5;
+
+}
+
+.combo3 {
+    grid-column: 1/2;
+    grid-row: 5 / 6;
 }
 
 .beef,
 .chicken,
 .veg {
-    margin-top: 5%;
+    margin-top: 3%;
+}
+
+.banh-title {
+    grid-column: 1/2;
+    grid-row: 7/8;
+    padding-top: 3%;
+    padding-bottom: 2%;
 }
 
 .banh {
-    margin-top: 0;
-    grid-row: 4;
+    grid-column: 1/2;
+    grid-row: 8/9;
 }
 
 .entree-items {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, auto);
+    grid-template-rows: repeat(5, 0.2fr);
+    width: 90%;
+
 }
 
 .entrees {
-    grid-column: 1 / span 2;
+    grid-column: 1 / 3;
     grid-row: 1;
 }
 
 .ent-desc {
+    grid-column: 1 / 3;
     grid-row: 2;
-    grid-column: 1 / span 2;
     margin-bottom: 5%;
 }
 
@@ -298,28 +328,26 @@ h2 {
 }
 
 .entree2 {
-    grid-column: 3 / 6;
+    grid-column: 3 / 5;
     grid-row: 1;
-    margin-left: 7%;
 }
 
 .ent-desc2 {
     grid-row: 2;
-    grid-column: 3 / span 2;
-    margin-left: 7%;
+    grid-column: 3 / 5;
     margin-bottom: 5%;
 }
 
 .stir-options {
     grid-row: 3;
-    grid-column: 3 / span 2;
+    grid-column: 3 / 5;
     border-style: solid;
     border-color: #8AA160;
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: auto;
-    margin-left: 7%;
     align-items: center;
+    margin-bottom: 5%;
 }
 
 .meat3 {
@@ -334,39 +362,37 @@ h2 {
 }
 
 .stir1 {
-    font-weight: bold;
     grid-row: 4;
     grid-column: 3;
-    margin-left: 15%;
-    margin-right: -5%;
+    font-weight: bold;
 }
 
 .stir2 {
+    grid-row: 5;
     grid-column: 3;
     font-weight: bold;
-    grid-row: 5;
-    margin-left: 15%;
-    margin-right: -5%;
-
 }
 
 .stir3 {
+    grid-row: 4;
     grid-column: 4;
     font-weight: bold;
-    margin-left: 10%;
+
 }
 
 .stir4 {
+    grid-row: 5;
     grid-column: 4;
     font-weight: bold;
-    margin-left: 10%;
 }
 
 .spec-items {
     display: grid;
-    grid-template-columns: 0.5fr 0.5fr 1fr;
-    grid-template-rows: repeat(auto, 4);
+    grid-template-columns: 0.243fr 0.243fr 0.5fr;
+    grid-template-rows: repeat(4, 0.25fr);
+    width: 90%;
 }
+
 
 .specialty {
     grid-column: 1/3;
@@ -409,16 +435,15 @@ h2 {
 .ala {
     font-weight: bold;
     grid-row: 1;
-    grid-column: 3;
-    margin-left: 1%;
+    grid-column: 3/4;
+
 }
 
 .carte {
     border-style: solid;
     border-color: #8AA160;
-    grid-row: 2 / span 2;
-    grid-column: 3;
-    margin-left: 1%;
+    grid-row: 2 /4;
+    grid-column: 3/4;
     padding: 5%;
     text-align: right;
     width: 55%;
@@ -426,32 +451,27 @@ h2 {
 }
 
 @media only screen and (max-width: 769px) {
-    * {
-        font-size: 1em;
-    }
-
-    nav {
-        font-size: 1em;
+    h1 {
+        font-size: 8em;
     }
 
     h2 {
         font-size: 2em;
     }
 
-    .holder {
-        overflow: none;
+    .grid-container {
+        margin-left: 7.5%;
+        margin-right: 7.5%;
+        grid-column-gap: 0%;
     }
 
-    .items {
+    .items-app {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: repeat(15, 0.1fr) repeat(35, 0.1fr);
-        margin-left: 10%;
-        margin-right: 10%;
+        grid-template-rows: repeat(13, 0.07692307692fr);
         text-align: left;
-        align-items: start;
         margin-top: 10%;
-        max-height: none;
+        width: 85%;
     }
 
     .app {
@@ -523,22 +543,29 @@ h2 {
         grid-column: 1;
     }
 
+    .items-pho {
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(6, 0.16666666666fr);
+        text-align: left;
+        width: 85%;
+    }
+
     .pho {
         grid-column: 1;
-        grid-row: 14 / 15;
-        margin-left: 0;
+        grid-row: 1/2;
+
     }
 
     .options {
-        grid-row: 15 / span 1;
         grid-column: 1;
+        grid-row: 2/3;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 1fr 1fr;
-        margin-left: 0;
     }
 
     .title-options {
-        grid-column: 1/ span 3;
+        grid-column: 1/ 3;
         margin-bottom: 0;
         font-size: 1em;
     }
@@ -548,7 +575,6 @@ h2 {
         grid-row: 2;
         justify-self: end;
         text-align: left;
-        margin-right: 0%;
         font-size: 1em;
     }
 
@@ -557,7 +583,6 @@ h2 {
         grid-row: 2;
         justify-self: start;
         text-align: left;
-        margin-left: 5%;
         font-size: 1em;
     }
 
@@ -566,216 +591,191 @@ h2 {
         justify-content: flex-start;
         align-self: start;
         grid-column: 1;
-        grid-row: 16;
-        margin-top: 0%;
+        grid-row: 3/4;
         margin-left: 0;
     }
 
     .combo2 {
         grid-column: 1;
-        grid-row: 17;
+        grid-row: 4/5;
     }
 
     .combo3 {
         grid-column: 1;
-        grid-row: 18;
+        grid-row: 5/6;
     }
 
     .combo4 {
         grid-column: 1;
-        grid-row: 19;
+        grid-row: 6/7;
     }
 
 
     .entree-items {
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 0.1fr repeat(26, 0.1fr);
-        margin-left: 10%;
-        margin-right: 10%;
-    }
-
-    .ent-desc {
-        grid-row: 2;
-        grid-column: 1 / span 1;
-        align-self: start;
+        grid-template-rows: repeat(13, 0.07692307692);
+        width: 85%;
     }
 
     .entrees {
-        grid-column: 1;
-        grid-row: 1;
-        margin-top: 40%;
+        grid-row: 1/2;
+        grid-column: 1/2;
+    }
+
+    .ent-desc {
+        grid-row: 2/3;
+        grid-column: 1/2;
     }
 
     .grill1 {
-        grid-row: 3;
-        grid-column: 1;
+        grid-row: 3/4;
+        grid-column: 1/2;
         font-weight: bold;
     }
 
     .grill2 {
-        grid-row: 4;
-        grid-column: 1;
+        grid-row: 4/5;
+        grid-column: 1/2;
         font-weight: bold;
     }
 
     .grill3 {
-        margin-top: 0;
-        grid-row: 5;
-        grid-column: 1;
+        grid-row: 5/6;
+        grid-column: 1/2;
+        font-weight: bold;
     }
 
     .grill4 {
-        grid-row: 6;
-        grid-column: 1;
+        grid-row: 6/7;
+        grid-column: 1/2;
         font-weight: bold;
-        margin-top: 0;
     }
 
 
     .entree2 {
-        grid-column: 1;
-        grid-row: 7;
-        align-self: end;
-        margin: 0;
-        margin-left: 0%;
+        grid-row: 7/8;
+        grid-column: 1/2;
     }
 
     .ent-desc2 {
-        grid-row: 8 / span 1;
-        grid-column: 1;
-        align-self: start;
-        margin-left: 0%;
+        grid-row: 8 / 9;
+        grid-column: 1/2;
     }
 
     .stir-options {
-        grid-row: 9;
-        grid-column: 1;
+        grid-row: 9/10;
+        grid-column: 1/2;
         display: grid;
         grid-template-columns: 0.5fr 0.5fr;
         grid-template-rows: 1fr;
-        align-content: left;
-        margin-left: 0%;
-    }
-
-    .title-options2 {
-        grid-column: 1;
-        margin: 1%;
     }
 
     .meat3 {
-        grid-column: 1;
-        grid-row: 1;
-        justify-self: start;
-        text-align: left;
+        grid-column: 1/2;
+        grid-row: 1/2;
         margin: 5%;
     }
 
     .meat4 {
-        grid-column: 2;
-        grid-row: 1;
-        justify-self: start;
-        text-align: left;
+        grid-column: 2/3;
+        grid-row: 1/2;
         margin: 5%;
         margin-left: 20%;
     }
 
     .stir1 {
+        grid-row: 10/11;
+        grid-column: 1/2;
         font-weight: bold;
-        grid-row: 10;
-        grid-column: 1;
-        margin-left: 0%;
+
     }
 
     .stir2 {
-        grid-column: 1;
+        grid-row: 11/12;
+        grid-column: 1/2;
         font-weight: bold;
-        grid-row: 11;
-        margin-left: 0%;
     }
 
     .stir3 {
-        grid-column: 1;
+        grid-row: 12/13;
+        grid-column: 1/2;
         font-weight: bold;
-        margin-left: 0%;
-        grid-row: 12;
     }
 
     .stir4 {
-        grid-column: 1;
+        grid-row: 13/14;
+        grid-column: 1/2;
         font-weight: bold;
-        margin-left: 0%;
-        grid-row: 13;
     }
 
     .spec-items {
-        margin-left: 10%;
         display: grid;
         grid-template-columns: 1fr;
-        grid-template-rows: 0.1fr repeat(7, 0.3fr);
-        grid-gap: 0;
-        margin-right: 10%;
+        grid-template-rows: repeat(8, 0.125fr);
+        width: 85%;
     }
 
     .specialty {
         grid-row: 1 / 2;
-        margin-top: 40%;
+        grid-column: 1/2;
     }
 
     .spec1 {
         font-weight: bold;
-        grid-row: 2;
-        grid-column: 1;
+        grid-row: 2/3;
+        grid-column: 1/2;
     }
 
     .spec2 {
         font-weight: bold;
-        grid-row: 3;
+        grid-row: 3/4;
+        grid-column: 1/2;
 
     }
 
     .spec3 {
         font-weight: bold;
-        grid-row: 4;
+        grid-row: 4/5;
+        grid-column: 1/2;
     }
 
     .spec4 {
         font-weight: bold;
-        grid-row: 5;
-        grid-column: 1;
+        grid-row: 5/6;
+        grid-column: 1/2;
     }
 
     .spec5 {
         font-weight: bold;
-        grid-row: 6;
-        grid-column: 1;
+        grid-row: 6/7;
+        grid-column: 1/2;
     }
 
     .spec6 {
         font-weight: bold;
-        grid-row: 7;
-        grid-column: 1;
+        grid-row: 7/8;
+        grid-column: 1/2;
 
     }
 
     .ala {
         font-weight: bold;
-        grid-row: 8;
-        grid-column: 1;
-        margin-left: 0%;
-        margin-top: 50px;
+        grid-row: 8/9;
+        grid-column: 1/2;
 
     }
 
     .carte {
+        grid-row: 9 / 11;
+        grid-column: 1/2;
         border-style: solid;
         border-color: #8AA160;
-        grid-row: 9 / span 3;
-        grid-column: 1;
         min-width: 250px;
         width: 60%;
         margin-bottom: 5%;
         padding-bottom: 15%;
         text-align: right;
     }
+
 }
